WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308251
[AppKit Gestures] Double click gesture never wins over single click
https://bugs.webkit.org/show_bug.cgi?id=308251
Summary
[AppKit Gestures] Double click gesture never wins over single click
Abrar Rahman Protyasha
Reported
2026-02-19 15:41:23 PST
rdar://170757857
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-02-19 15:45:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59034
EWS
Comment 2
2026-02-19 18:46:35 PST
Committed
307877@main
(4c7fda6a6b6e): <
https://commits.webkit.org/307877@main
> Reviewed commits have been landed. Closing PR #59034 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug