[AppKit Gestures] Double click gesture never wins over single click https://bugs.webkit.org/show_bug.cgi?id=308251 rdar://170757857

Reviewed by Aditya Keerthi.

We set up the failure relation between the single click and double click
gesture recognizers in the wrong direction. This patch corrects that.

* Source/WebKit/UIProcess/mac/WKAppKitGestureController.mm:
(-[WKAppKitGestureController gestureRecognizer:shouldBeRequiredToFailByGestureRecognizer:]):
(-[WKAppKitGestureController gestureRecognizer:shouldRequireFailureOfGestureRecognizer:]):

Canonical link: https://commits.webkit.org/307877@main